# python-devcontainer

./: .gitignore  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yaml
src/python_devcontainer/: cli.py
